--- a/sources/templates/common/comp_popup_video.html
+++ b/sources/templates/common/comp_popup_video.html
@@ -6,19 +6,19 @@
             <div class="video_display_icon_div" id="video_download_button">
                 <img class="video_display_icon" src="{{ url_for('static', filename='icons/download_white.png') }}">
             </div>
-            <div class="video_display_icon_div">
+            <div class="video_display_icon_div" id="video_rewind_10_min_button">
                 <img class="video_display_icon" src="{{ url_for('static', filename='icons/fast_rewind_plus.png') }}">
             </div>
-            <div class="video_display_icon_div">
+            <div class="video_display_icon_div" id="video_rewind_1_min_button">
                 <img class="video_display_icon" src="{{ url_for('static', filename='icons/fast_rewind.png') }}">
             </div>
-            <div class="video_display_icon_div">
+            <div class="video_display_icon_div" id="video_rewind_10_sec_button">
                 <img class="video_display_icon" src="{{ url_for('static', filename='icons/last_page.png') }}">
             </div>
-            <div class="video_display_icon_div">
+            <div class="video_display_icon_div" id="video_forward_10_sec_button">
                 <img class="video_display_icon" src="{{ url_for('static', filename='icons/next_page.png') }}">
             </div>
-            <div class="video_display_icon_div">
+            <div class="video_display_icon_div" id="video_forward_1_min_button">
                 <img class="video_display_icon" src="{{ url_for('static', filename='icons/fast_forward.png') }}">
             </div>
             <div class="video_display_icon_div" id="video_forward_10_min_button">
