--- a/sources/static/css/file_system/page_file_sys.css
+++ b/sources/static/css/file_system/page_file_sys.css
@@ -214,6 +214,7 @@
     padding-top: 0px;
     padding-bottom: 0px;
     font-size: var(--text-remark-size);
+    background: transparent;
 }
 .file_search_input:focus-visible{
     outline: none;
