--- a/sources/static/css/file_system/page_file_sys.css
+++ b/sources/static/css/file_system/page_file_sys.css
@@ -35,7 +35,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid var(--theme-main-color);
+    border: 2px solid var(--text-remark-color);
     transition: background-color 1s ease, border-color 1s ease;
 }
 .file_sys_header_icon:hover{
@@ -330,7 +330,7 @@
 }
 .file_control_img{
     width: var(--icon-base-size);
-    border: 2px solid var(--theme-active-color);
+    border: 2px solid var(--text-remark-color);
     border-radius: var(--border-min-radius);
     transition: border-color 0.5s ease;
 }
@@ -340,7 +340,7 @@
 .file_control_content{
     width: var(--file-item-button-width);
     background-color: white;
-    border: 2px solid var(--theme-main-color);
+    border: 2px solid var(--text-remark-color);
     border-radius: calc( var(--border-radius) - 2px );
     box-sizing: border-box;
     position: fixed;
