--- a/sources/templates/file_system/comp_popup_file_control.html
+++ b/sources/templates/file_system/comp_popup_file_control.html
@@ -8,6 +8,10 @@
             <img class="file_control_icon" src="{{ url_for('static', filename='icons/link.png') }}">
             <div class="file_control_text">复制相对路径</div>
         </div>
+        <div class="file_control_item clickable spin_holder" id="set_background_button">
+            <img class="file_control_icon" src="{{ url_for('static', filename='icons/next_page_blue.png') }}">
+            <div class="file_control_text">设置背景</div>
+        </div>
         <div class="file_control_item clickable spin_holder" id="file_download_button">
             <img class="file_control_icon" src="{{ url_for('static', filename='icons/download.png') }}">
             <div class="file_control_text">下载</div>
