--- a/sources/templates/common/comp_side_bar.html
+++ b/sources/templates/common/comp_side_bar.html
@@ -11,6 +11,12 @@
                     </div>
                     <a class="side_bar_text">文件仓库</a>
                 </div>
+                <div class="side_bar_item clickable" id="side_bar_music_box">
+                    <div class="side_bar_icon">
+                        <img src="{{url_for('static',filename='icons/music_gray.png')}}">
+                    </div>
+                    <a class="side_bar_text">音乐盒</a>
+                </div>
             </dl>
         </dd>
     </div>
