--- a/sources/templates/common/comp_page_selector.html
+++ b/sources/templates/common/comp_page_selector.html
@@ -1,6 +1,6 @@
 <div class="page_select_container" id="{% block page_container_id %}page_select_container{% endblock %}">
     <div class="page_select_icon" id="{% block last_page_id %}last_page_button{% endblock %}">
-        <img class="page_select_img" src="{{ url_for('static', filename='icons/last_page.png') }}">
+        <img class="page_select_img" src="{{ url_for('static', filename='icons/last_page_trans.png') }}">
     </div>
     <form class="page_select_info">
         <a class="page_select_text">第</a>
@@ -8,7 +8,7 @@
         <a class="page_select_text" id="{% block page_text_id %}page_text_id{% endblock %}">页/共1页</a>
     </form>
     <div class="page_select_icon" id="{% block next_page_id %}next_page_button{% endblock %}">
-        <img class="page_select_img" src="{{ url_for('static', filename='icons/next_page.png') }}">
+        <img class="page_select_img" src="{{ url_for('static', filename='icons/next_page_trans.png') }}">
     </div>
     <div class="page_select_limit">
         <select class="page_select_limit_list" id="{% block page_select_limit %}page_select_limit{% endblock %}">
