--- a/sources/templates/file_system/page_file_system.html
+++ b/sources/templates/file_system/page_file_system.html
@@ -1,19 +1,5 @@
 <div class="file_sys_container side_bar_expand padding_trans" id="file_sys_container">
-    <div class="file_sys_header" id="file_sys_header">
-        <div class="file_sys_header_icon clickable" id="file_sys_side_button">
-            <img src="{{ url_for('static', filename='icons/menu.png') }}">
-        </div>
-        <div class="file_sys_header_title">文件仓库</div>
-        <div class="file_sys_header_icon clickable">
-            <img src="{{ url_for('static', filename='icons/notification.png') }}">
-        </div>
-        <div class="file_sys_header_icon clickable">
-            <img src="{{ url_for('static', filename='icons/setting.png') }}">
-        </div>
-        <div class="file_sys_header_icon clickable">
-            <img src="{{ url_for('static', filename='icons/user.png') }}">
-        </div>
-    </div>
+    {% include 'common/comp_navigation_bar.html' %}
     <div class="file_sys_body" id="file_sys_body">
         <div class="file_sys_menu" id="file_sys_menu">
             <button class="file_sys_menu_button clickable" id="file_add_pop_button">上传文件/创建文件夹</button>
@@ -36,6 +22,12 @@
                             <img src="{{ url_for('static', filename='icons/text.png') }}">
                         </div>
                         <a class="file_sys_menu_text clickable">创建文本</a>
+                    </div>
+                    <div class="file_sys_menu_item clickable spin_holder" id="tidy_up_button">
+                        <div class="file_sys_menu_icon">
+                            <img src="{{ url_for('static', filename='icons/next_page_blue.png') }}">
+                        </div>
+                        <a class="file_sys_menu_text clickable">整理文件</a>
                     </div>
                 </dl>
             </dd>
