--- a/sources/templates/common/comp_popup_image.html
+++ b/sources/templates/common/comp_popup_image.html
@@ -7,6 +7,9 @@
             <div class="image_display_icon_div" id="image_close_button">
                 <img class="image_display_icon" src="{{ url_for('static', filename='icons/close.png') }}">
             </div>
+            <div class="image_display_icon_div" id="image_set_button">
+                <img class="image_display_icon" src="{{ url_for('static', filename='icons/image_white.png') }}">
+            </div>
             <div class="image_display_icon_div" id="image_edit_button">
                 <img class="image_display_icon" src="{{ url_for('static', filename='icons/edit_white.png') }}">
             </div>
