--- a/sources/templates/file_system/comp_popup_file_control.html
+++ b/sources/templates/file_system/comp_popup_file_control.html
@@ -9,7 +9,7 @@
             <div class="file_control_text">复制相对路径</div>
         </div>
         <div class="file_control_item clickable spin_holder" id="set_background_button">
-            <img class="file_control_icon" src="{{ url_for('static', filename='icons/next_page_blue.png') }}">
+            <img class="file_control_icon" src="{{ url_for('static', filename='icons/image_blue.png') }}">
             <div class="file_control_text">设置背景</div>
         </div>
         <div class="file_control_item clickable spin_holder" id="file_download_button">
