--- a/sources/templates/music_box/page_music_box.html
+++ b/sources/templates/music_box/page_music_box.html
@@ -17,7 +17,20 @@
             </dd>
         </div>
         <div class="music_content_panel">
-            <div class="music_control_panel"></div>
+            <div class="music_control_panel">
+                <div class="music_control_icon_div">
+                    <img src="/static/icons/dashboard.png" class="music_control_icon">
+                </div>
+                <div class="music_control_title">
+                    <div class="music_control_info_icon">
+                        <img src="/static/icons/music.png">
+                    </div>
+                    <div class="music_control_title_text">合集</div>
+                </div>
+                <div class="music_search_bar">
+
+                </div>
+            </div>
             <div class="music_content_main_panel"></div>
         </div>
     </div>
