--- a/sources/static/css/page/page_music_box.css
+++ b/sources/static/css/page/page_music_box.css
@@ -77,7 +77,7 @@
     background-color: var(--theme-background-color);
     border-radius: var(--border-radius);
     display: grid;
-    grid-template-rows: 48px 48px 1fr;
+    grid-template-rows: 52px 52px 1fr;
     padding: var(--element-margin);
     box-sizing: border-box;
     grid-gap: var(--element-margin);
@@ -91,7 +91,7 @@
 }
 .music_menu_button{
     width: 100%;
-    height: 48px;
+    height: 52px;
     background-color: var(--theme-part-color);
     border-radius: var(--border-radius);
     color: var(--text-active-color);
@@ -110,7 +110,7 @@
 }
 .music_menu_dl{
     width: 100%;
-    height: 48px;
+    height: 52px;
     margin-block-start: 0;
     margin-block-end: 0;
 }
@@ -126,7 +126,7 @@
 }
 .music_menu_item{
     width: 100%;
-    height: 48px;
+    height: 52px;
     background-color: var(--theme-background-color);
     color: var(--text-main-color);
     border-radius: var(--border-radius);
@@ -162,12 +162,48 @@
 .music_control_panel{
     height: 37px;
     width: 100%;
-    background-color: var(--theme-background-color);
-    border-radius: var(--border-radius);
+    display: grid;
+    grid-template-columns: 37px 1fr 1fr;
+    grid-gap: var(--element-margin);
 }
 .music_content_main_panel{
     height: 100%;
     width: 100%;
+    background-color: var(--theme-background-color);
+    border-radius: var(--border-radius);
+}
+.music_control_icon_div{
+    height: 37px;
+    width: 37px;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+}
+.music_control_icon{
+    height: 32px;
+    width: 32px;
+    border-radius: 13px;
+    border: 2px solid var(--text-remark-color);
+}
+.music_control_title{
+    background-color: var(--theme-background-color);
+    border-radius: var(--border-radius);
+    padding-left: var(--element-margin);
+    padding-right: var(--element-margin);
+    align-items: center;
+    display: grid;
+    grid-template-columns: 25px 1fr;
+    grid-gap: var(--element-margin);
+}
+.music_control_info_icon{
+    display: grid;
+    align-items: center;
+}
+.music_control_info_icon img{
+    width: 25px;
+    height: 25px;
+}
+.music_search_bar{
     background-color: var(--theme-background-color);
     border-radius: var(--border-radius);
 }
