--- a/sources/templates/music_box/page_music_box.html
+++ b/sources/templates/music_box/page_music_box.html
@@ -27,11 +27,25 @@
                     </div>
                     <div class="music_control_title_text">合集</div>
                 </div>
-                <div class="music_search_bar">
-
-                </div>
+                <form class="music_search_bar">
+                    <div class="music_control_info_icon">
+                        <img src="/static/icons/magnifier.png">
+                    </div>
+                    <input placeholder="输入文本搜索" class="music_search_input">
+                </form>
             </div>
-            <div class="music_content_main_panel"></div>
+            <div class="music_content_main_panel">
+                <div class="music_content_header">
+                    <div class="music_content_header_text">歌曲</div>
+                    <div class="music_content_header_text">歌手</div>
+                    <div class="music_content_header_text">专辑</div>
+                    <div class="music_content_header_text">标签</div>
+                    <div class="music_content_header_text">操作</div>
+                </div>
+                <dd class="music_content_table">
+                    <dl class="music_content_row"></dl>
+                </dd>
+            </div>
         </div>
     </div>
     <div class="music_play_bar">
