--- a/sources/templates/music_box/page_music_box.html
+++ b/sources/templates/music_box/page_music_box.html
@@ -25,7 +25,7 @@
                     <div class="music_control_info_icon">
                         <img src="/static/icons/music.png">
                     </div>
-                    <div class="music_control_title_text">合集</div>
+                    <div class="music_control_title_text" id="music_control_title_text"></div>
                 </div>
                 <form class="music_search_bar">
                     <div class="music_control_info_icon">
@@ -43,7 +43,7 @@
                     <div class="music_content_header_text">操作</div>
                 </div>
                 <dd class="music_content_table">
-                    <dl class="music_content_row"></dl>
+                    <dl class="music_content_row" id="music_content_row"></dl>
                 </dd>
             </div>
         </div>
