--- a/sources/templates/home.html
+++ b/sources/templates/home.html
@@ -25,8 +25,8 @@
     {% assets "file_system_js" %}
         <script type="module" src="{{ ASSET_URL }}"></script>
     {% endassets %}
-    <script type="module" src="{{url_for('static', filename='js/tinymce/tinymce.min.js')}}" referrerpolicy="origin"
+    <script src="{{url_for('static', filename='js/tinymce/tinymce.min.js')}}" referrerpolicy="origin"
         defer></script>
-    <script type="module" src="{{url_for('static', filename='js/videojs/video.min.js')}}" referrerpolicy="origin"
+    <script src="{{url_for('static', filename='js/videojs/video.min.js')}}" referrerpolicy="origin"
         defer></script>
 {% endblock %}
