--- a/sources/static/css/page/page_file_sys.css
+++ b/sources/static/css/page/page_file_sys.css
@@ -352,6 +352,7 @@
         height: calc( 100% - var(--element-margin) * 2 - 70px );
         border: 2px solid var(--theme-part-color);
         z-index: 1;
+        background-color: white;
     }
     .file_sys_body{
         padding-left: var(--element-margin);
