--- a/sources/static/css/page/page_music_box.css
+++ b/sources/static/css/page/page_music_box.css
@@ -30,15 +30,26 @@
     display: grid;
     grid-template-columns: 48px 1fr repeat(5, 48px) 2fr 1fr;
     grid-gap: var(--element-margin);
+    align-items: center;
 }
 .music_play_image_div{
     width:48px;
+    height: 48px;
     display: grid;
     align-items: center;
+    box-sizing: border-box;
 }
 .music_play_image{
     width: 48px;
     height: 48px;
+    border: 2px solid transparent;
+    background-color: transparent;
+    border-radius: var(--border-min-radius);
+    transition: border-color 0.5s ease, background-color 0.5s ease;
+}
+.music_play_image:hover{
+    border-color: var(--theme-part-color);
+    background-color: var(--theme-active-color);
 }
 .music_play_info{
     width: 100%;
@@ -284,6 +295,16 @@
     padding-right: var(--element-margin);
     box-sizing: border-box;
     align-items: center;
+    background-color: transparent;
+    transition: background-color 0.5s ease;
+}
+.music_content:hover{
+    background-color: var(--theme-active-color);
+}
+.music_content>*:last-child{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .music_item_name_div{
     height: 100%;
