--- a/sources/templates/music_box/page_music_box.html
+++ b/sources/templates/music_box/page_music_box.html
@@ -2,8 +2,8 @@
     {% include 'common/comp_navigation_bar.html' %}
     <div class="music_main_container">
         <div class="music_collect_menu">
-            <button class="music_menu_button" id="add_collect_button">新增合集</button>
-            <button class="music_menu_button" id="add_music_button">新增歌曲</button>
+            <button class="music_menu_button clickable" id="add_collect_button">新增合集</button>
+            <button class="music_menu_button clickable" id="add_music_button">新增歌曲</button>
             <dd class="music_menu_dd">
                 <dl class="music_menu_dl" id="music_menu_dl">
                     <div class="music_menu_label">合集</div>
@@ -12,7 +12,7 @@
         </div>
         <div class="music_content_panel">
             <div class="music_control_panel">
-                <div class="music_control_icon_div">
+                <div class="music_control_icon_div clickable">
                     <img src="/static/icons/dashboard.png" class="music_control_icon">
                 </div>
                 <div class="music_control_title">
@@ -48,34 +48,34 @@
                 <img src="/static/icons/music.png" class="music_play_image">
             </div>
             <div class="music_play_info">
-                <div class="music_play_name">Test</div>
-                <div class="music_play_singer">Test</div>
+                <div class="music_play_name" id="music_bar_play_name">未知</div>
+                <div class="music_play_singer" id="music_bar_play_singer">未知</div>
             </div>
-            <div class="music_play_image_div">
+            <div class="music_play_image_div clickable">
                 <img src="/static/icons/random_order.png" class="music_play_image">
             </div>
-            <div class="music_play_image_div">
+            <div class="music_play_image_div clickable">
                 <img src="/static/icons/fast_rewind_trans.png" class="music_play_image">
             </div>
-            <div class="music_play_image_div">
-                <img src="/static/icons/next_page_trans.png" class="music_play_image">
+            <div class="music_play_image_div clickable">
+                <img src="/static/icons/next_page_trans.png" class="music_play_image" id="music_bar_play_button">
             </div>
-            <div class="music_play_image_div">
+            <div class="music_play_image_div clickable">
                 <img src="/static/icons/fast_forward_trans.png" class="music_play_image">
             </div>
-            <div class="music_play_image_div">
+            <div class="music_play_image_div clickable">
                 <img src="/static/icons/add_collection.png" class="music_play_image">
             </div>
             <div class="music_play_progress_bar">
-                <div class="music_play_progress_text">00:00</div>
-                <input type="range" min="0" max="100" step="1" value="0" class="music_play_progress">
-                <div class="music_play_progress_text">00:00</div>
+                <div class="music_play_progress_text" id="music_bar_start_text">00:00</div>
+                <input type="range" min="0" max="100" step="1" value="0" class="music_play_progress" id="music_bar_play_progress">
+                <div class="music_play_progress_text" id="music_bar_end_text">00:00</div>
             </div>
             <div class="music_play_volume_bar">
-                <div class="music_play_image_div">
+                <div class="music_play_image_div clickable">
                     <img src="/static/icons/volume_trans.png" class="music_play_image">
                 </div>
-                <input type="range" min="0" max="100" step="1" value="50" class="music_play_progress">
+                <input type="range" min="0" max="100" step="1" value="50" class="music_play_progress" id="music_bar_volume">
             </div>
         </div>
     </div>
