--- a/sources/templates/common/comp_navigation_bar.html
+++ b/sources/templates/common/comp_navigation_bar.html
@@ -9,7 +9,7 @@
     <div class="navigation_icon clickable">
         <img src="{{ url_for('static', filename='icons/setting.png') }}">
     </div>
-    <div class="navigation_icon clickable">
+    <div class="navigation_icon clickable" id="navigate_user_button">
         <img src="{{ url_for('static', filename='icons/user.png') }}">
     </div>
 </div>
