--- a/sources/templates/home.html
+++ b/sources/templates/home.html
@@ -14,6 +14,7 @@
     {% include 'common/comp_popup_confirm.html' %}
     {% include 'common/comp_popup_image.html' %}
     {% include 'common/comp_popup_video.html' %}
+    {% include 'common/comp_popup_user_control.html' %}
     {% include 'file_system/comp_popup_file_add.html'%}
     {% include 'file_system/comp_popup_file_control.html'%}
     {% include 'file_system/comp_popup_file_edit.html' %}
