--- a/sources/templates/music.html
+++ b/sources/templates/music.html
@@ -11,6 +11,7 @@
     {% include 'music_box/comp_popup_collect_add.html' %}
     {% include 'music_box/comp_popup_music_add.html' %}
     {% include 'common/comp_side_bar.html' %}
+    {% include 'common/comp_popup_user_control.html' %}
 {% endblock %}
 
 {% block js_file %}
