--- a/sources/templates/music.html
+++ b/sources/templates/music.html
@@ -10,8 +10,11 @@
     {% include 'music_box/page_music_box.html' %}
     {% include 'music_box/comp_popup_collect_add.html' %}
     {% include 'music_box/comp_popup_music_add.html' %}
+    {% include 'music_box/comp_popup_music_edit.html' %}
+    {% include 'music_box/comp_popup_music_control.html' %}
     {% include 'common/comp_side_bar.html' %}
     {% include 'common/comp_popup_user_control.html' %}
+    {% include 'common/comp_popup_confirm.html' %}
 {% endblock %}
 
 {% block js_file %}
