--- a/sources/templates/music_box/comp_popup_music_add.html
+++ b/sources/templates/music_box/comp_popup_music_add.html
@@ -1,5 +1,5 @@
 <div class="popup_container_gray hidden" id="music_add_overlay">
-    <div class="form_popup_content" id="music_collect_content">
+    <div class="form_popup_content" id="music_add_content">
         <div class="form_popup_header">
             <a class="form_popup_header_text">新增歌曲</a>
         </div>
