--- a/sources/static/css/common/comp_navigation_bar.css
+++ b/sources/static/css/common/comp_navigation_bar.css
@@ -43,7 +43,7 @@
     mix-blend-mode: multiply;
 }
 .navigation_user_content{
-    width: var(--file-item-button-width);
+    width: 204px;
     background-color: white;
     border: 2px solid var(--text-remark-color);
     border-radius: calc( var(--border-radius) - 2px );
@@ -53,7 +53,7 @@
 }
 .navigation_control_item{
     width: 100%;
-    height: var(--file-item-height);
+    height: 56px;
     display: flex;
     align-items: center;
     box-sizing: border-box;
