--- a/sources/static/css/page/page_music_box.css
+++ b/sources/static/css/page/page_music_box.css
@@ -323,3 +323,41 @@
     font-size: var(--main-text-size);
     color: var(--text-main-color);
 }
+.music_control_content{
+    width: 204px;
+    background-color: white;
+    border: 2px solid var(--text-remark-color);
+    border-radius: calc( var(--border-radius) - 2px );
+    box-sizing: border-box;
+    position: fixed;
+    z-index: 2;
+}
+.music_control_item{
+    width: 100%;
+    height: 56px;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    border-radius: var(--border-min-radius);
+    border: 2px solid var(--theme-background-color);
+    background-color: var(--theme-background-color);
+    transition: background-color 1s ease, border-color 1s ease;
+}
+.music_control_item:hover{
+    background-color: var(--theme-active-color);
+    border-color: var(--theme-part-color);
+}
+.music_control_icon{
+    width: var(--icon-base-size);
+    height: var(--icon-base-size);
+    margin-left: var(--element-margin);
+    margin-right: var(--element-margin);
+}
+.music_control_text{
+    font-size: var(--main-text-size);
+    color: var(--text-main-color);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-right: var(--element-margin);
+}
