--- a/sources/templates/music.html
+++ b/sources/templates/music.html
@@ -12,6 +12,7 @@
     {% include 'music_box/comp_popup_music_add.html' %}
     {% include 'music_box/comp_popup_music_edit.html' %}
     {% include 'music_box/comp_popup_music_control.html' %}
+    {% include 'common/comp_popup_message.html' %}
     {% include 'common/comp_side_bar.html' %}
     {% include 'common/comp_popup_user_control.html' %}
     {% include 'common/comp_popup_confirm.html' %}
