--- a/sources/templates/music_box/page_music_box.html
+++ b/sources/templates/music_box/page_music_box.html
@@ -52,16 +52,16 @@
                 <div class="music_play_singer" id="music_bar_play_singer">未知</div>
             </div>
             <div class="music_play_image_div clickable">
-                <img src="/static/icons/random_order.png" class="music_play_image">
+                <img src="/static/icons/order_play.png" class="music_play_image" id="music_bar_order_button">
             </div>
             <div class="music_play_image_div clickable">
-                <img src="/static/icons/fast_rewind_trans.png" class="music_play_image">
+                <img src="/static/icons/fast_rewind_trans.png" class="music_play_image" id="music_bar_rewind_button">
             </div>
             <div class="music_play_image_div clickable">
                 <img src="/static/icons/next_page_trans.png" class="music_play_image" id="music_bar_play_button">
             </div>
             <div class="music_play_image_div clickable">
-                <img src="/static/icons/fast_forward_trans.png" class="music_play_image">
+                <img src="/static/icons/fast_forward_trans.png" class="music_play_image" id="music_bar_forward_button">
             </div>
             <div class="music_play_image_div clickable">
                 <img src="/static/icons/add_collection.png" class="music_play_image">
