--- a/sources/static/css/common/comp_default.css
+++ b/sources/static/css/common/comp_default.css
@@ -13,7 +13,7 @@
     height: 100vh;
     width: 100vw;
     margin: 0px;
-    background-color: var(--theme-main-color);
+    background-color: var(--theme-part-color);
     font-family: Arial, Helvetica, sans-serif;
     background-size: cover;
     background-position: top;
