--- a/sources/templates/music.html
+++ b/sources/templates/music.html
@@ -9,6 +9,7 @@
 {% block body_content %}
     {% include 'music_box/page_music_box.html' %}
     {% include 'music_box/comp_popup_collect_add.html' %}
+    {% include 'music_box/comp_popup_collect_edit.html' %}
     {% include 'music_box/comp_popup_music_add.html' %}
     {% include 'music_box/comp_popup_music_edit.html' %}
     {% include 'music_box/comp_popup_music_control.html' %}
