--- a/sources/static/css/page/page_music_box.css
+++ b/sources/static/css/page/page_music_box.css
@@ -206,16 +206,23 @@
     padding-right: var(--element-margin);
     align-items: center;
     display: grid;
-    grid-template-columns: 25px 1fr;
+    grid-template-columns: 25px 1fr 25px 25px;
     grid-gap: var(--element-margin);
 }
 .music_control_info_icon{
     display: grid;
     align-items: center;
-}
-.music_control_info_icon img{
     width: 25px;
     height: 25px;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
+.music_control_info_icon:hover{
+    border: 2px solid var(--theme-part-color);
+}
+.music_control_info_icon img{
+    width: 100%;
+    height: 100%;
 }
 .music_search_bar{
     background-color: var(--theme-background-color);
@@ -288,6 +295,9 @@
     border: 2px solid var(--text-remark-color);
     border-radius: var(--border-min-radius);
     transition: border-color .5s ease;
+}
+.music_item_control_img:hover{
+    border-color: var(--theme-part-color);
 }
 .music_content{
     width: 100%;
