--- a/sources/templates/music_box/comp_popup_collect_add.html
+++ b/sources/templates/music_box/comp_popup_collect_add.html
@@ -1,5 +1,5 @@
 <div class="popup_container_gray hidden" id="msc_collect_add_overlay">
-    <div class="form_popup_content" id="msc_collect_content">
+    <div class="form_popup_content" id="msc_collect_add_content">
         <div class="form_popup_header">
             <a class="form_popup_header_text">新增合集</a>
         </div>
