--- a/sources/templates/music_box/page_music_box.html
+++ b/sources/templates/music_box/page_music_box.html
@@ -20,6 +20,12 @@
                         <img src="/static/icons/music.png">
                     </div>
                     <div class="music_control_title_text" id="music_control_title_text"></div>
+                    <div class="music_control_info_icon" id="edit_music_set_button">
+                        <img src="/static/icons/edit.png">
+                    </div>
+                    <div class="music_control_info_icon" id="delete_music_set_button">
+                        <img src="/static/icons/delete.png">
+                    </div>
                 </div>
                 <form class="music_search_bar">
                     <div class="music_control_info_icon">
