--- a/sources/templates/music_box/comp_popup_music_control.html
+++ b/sources/templates/music_box/comp_popup_music_control.html
@@ -1,15 +1,15 @@
 <div class="popup_fixed_container hidden" id="music_control_overlay">
     <div class="music_control_content" id="music_control_content">
         <div class="music_control_item clickable spin_holder" id="music_edit_button">
-            <img class="music_control_icon" src="{{ url_for('static', filename='icons/link.png') }}">
+            <img class="music_control_icon" src="{{ url_for('static', filename='icons/edit.png') }}">
             <div class="music_control_text">编辑</div>
         </div>
         <div class="music_control_item clickable spin_holder" id="music_download_button">
-            <img class="music_control_icon" src="{{ url_for('static', filename='icons/link.png') }}">
+            <img class="music_control_icon" src="{{ url_for('static', filename='icons/download.png') }}">
             <div class="music_control_text">下载</div>
         </div>
         <div class="music_control_item clickable spin_holder" id="music_delete_button">
-            <img class="music_control_icon" src="{{ url_for('static', filename='icons/link.png') }}">
+            <img class="music_control_icon" src="{{ url_for('static', filename='icons/delete.png') }}">
             <div class="music_control_text">删除</div>
         </div>
     </div>
