--- a/sources/templates/music_box/page_music_box.html
+++ b/sources/templates/music_box/page_music_box.html
@@ -70,7 +70,7 @@
                 <img src="/static/icons/fast_forward_trans.png" class="music_play_image" id="music_bar_forward_button">
             </div>
             <div class="music_play_image_div clickable">
-                <img src="/static/icons/add_collection.png" class="music_play_image">
+                <img src="/static/icons/add_collection.png" class="music_play_image" id="music_add_set_button">
             </div>
             <div class="music_play_progress_bar">
                 <div class="music_play_progress_text" id="music_bar_start_text">00:00</div>
